--- a/_bookdown_pdf.yml
+++ b/_bookdown_pdf.yml
@@ -1,6 +1,6 @@
 delete_merged_file: true
 output_dir: "_book_pdf"
-book_filename: "Handbook_Regression_People_Analytics.Rmd"
+book_filename: "Analisis Kuantitatif.Rmd"
 graphics: yes
 
 
