--- a/_output.yml
+++ b/_output.yml
@@ -2,7 +2,7 @@ bookdown::bs4_book:
   css: css/style.css
   theme:
     primary: "#0C1480"
-  repo: https://github.com/keithmcnulty/peopleanalytics-regression-book
+  repo: https://github.com/bangtedy/aktif
   includes:
     in_header: [ga_script.html, material_icons.html]
 bookdown::gitbook:
@@ -12,7 +12,7 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-        <li><a href="./">Handbook of Regression Modeling in People Analytics</a></li>
+        <li><a href="./">Analisis Kuantitatif</a></li>
     sharing:
       twitter: yes
       linkedin: yes
