--- a/_output.yml
+++ b/_output.yml
@@ -1,7 +1,7 @@
 bookdown::bs4_book:
   css: css/style.css
   theme:
-    primary: "#0C1480"
+    primary: "#990000"
   repo: https://github.com/bangtedy/aktif
   includes:
     in_header: [ga_script.html, material_icons.html]
